--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 et-xmlfile==1.1.0
+lxml==5.1.0
 openpyxl==3.1.2
+pillow==10.2.0
 PySide6==6.6.2
 PySide6_Addons==6.6.2
 PySide6_Essentials==6.6.2
+python-docx==1.1.0
 shiboken6==6.6.2
+typing_extensions==4.10.0
