--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+altgraph==0.17.4
 et-xmlfile==1.1.0
 lxml==5.1.0
+macholib==1.16.3
+modulegraph==0.19.6
 openpyxl==3.1.2
 pillow==10.2.0
+py2app==0.28.7
 PySide6==6.6.2
 PySide6_Addons==6.6.2
 PySide6_Essentials==6.6.2
+python-dateutil==2.9.0.post0
 python-docx==1.1.0
+setuptools==69.2.0
 shiboken6==6.6.2
+six==1.16.0
 typing_extensions==4.10.0
