--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -83,3 +83,17 @@ jobs:
         with:
           name: ${{ runner.os }}-debug-executable
           path: dist/ # Replace with the directory containing your debug executable
+      
+      - name: Build onedir executable with PyInstaller (Windows)
+        if: runner.os == 'Windows'
+        run: pyinstaller --onedir --windowed --icon=bkp_logo.jpg --add-data 'bkp_logo.jpg;.' main.py
+      
+      - name: Build onedir executable with PyInstaller (Non-Windows)
+        if: runner.os != 'Windows'
+        run: pyinstaller --onedir --windowed --icon=bkp_logo.jpg --add-data 'bkp_logo.jpg:.' main.py
+      
+      - name: Upload onedir artifacts (optional)
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ runner.os }}-onedir-executable
+          path: dist/ # Replace with the directory containing your onedir executable
