--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,6 +84,14 @@ jobs:
           name: ${{ runner.os }}-debug-executable
           path: dist/ # Replace with the directory containing your debug executable
       
+      - name: Delete dist directory (Windows)
+        if: runner.os == 'Windows'
+        run: rmdir /S /Q dist
+      
+      - name: Delete dist directory (Non-Windows)
+        if: runner.os != 'Windows'
+        run: rm -rf dist
+      
       - name: Build onedir executable with PyInstaller (Windows)
         if: runner.os == 'Windows'
         run: pyinstaller --onedir --windowed --icon=bkp_logo.jpg --add-data 'bkp_logo.jpg;.' main.py
